[package]
name = "boson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "*", features = ["linked"] }
ash-window = "*"
semver = "*"
raw-window-handle = "0.5.0"
bitflags = "*"
lazy_static = "*"
profiling = "*"
