[package]
name = "boson"
version = "0.13.1"
edition = "2021"
description = "A vulkan abstraction layer."
license = "MIT"
keywords = ["graphics", "vulkan"]
repository = "https://github.com/voxelphile/boson"
authors = ["Voxelphile", "Rustaceans like you!"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2+1.3.238", features = ["linked"] }
ash-window = "0.12.0"
semver = "1.0.17"
raw-window-handle = "0.5.0"
bitflags = "2.1.0"
lazy_static = "1.4.0"
profiling = "1.0.8"
shaderc = "0.8.2"

[workspace]
members = ["./", "examples/*"]
